<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/button_free" >
    
    <android.opengl.GLSurfaceView
        android:id="@+id/glSurfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>
    
    <TextView 
        android:id="@+id/textViewCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/red"
        android:textSize="64sp"
        android:visibility="visible"/>
    
    <ImageView 
        android:id="@+id/imagePause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:paddingTop="1dp"
        android:paddingRight="1dp"
        android:src="@android:drawable/ic_media_pause"
        android:contentDescription="@string/app_name"
        android:visibility="gone"
        android:onClick="onPauseClick"/>
    
    <LinearLayout 
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="#00000000"
        android:visibility="gone">
        
        <Button 
            android:id="@+id/buttonResume"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/play_resume"
        	android:textSize="@dimen/main_menu_button_text_size"
        	android:onClick="onPlayClick"/>
        
        <Button 
            android:id="@+id/buttonMainMenu"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/play_mainmenu"
        	android:textSize="@dimen/main_menu_button_text_size"
        	android:onClick="onMainMenuClick"/>
        
    </LinearLayout>
</FrameLayout>
