<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/button_free">
  
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="vertical">
        <LinearLayout 
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:gravity="center">
        
        	<View 
    			android:layout_width="match_parent"
    			android:layout_height="4dp" 
    			android:background="@color/button_focused"/>

        	<Button
            	android:id="@+id/buttonVolume"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:paddingLeft="20dp"
            	android:paddingRight="20dp"
            	android:gravity="left"
            	android:textColor="@color/white"
            	android:textSize="@dimen/main_menu_button_text_size"
            	android:text="@string/settings_sound"
            	android:background="@drawable/main_menu_button"
            	android:drawableRight="@drawable/volume_on" />
        
        	<View 
    			android:layout_width="match_parent"
    			android:layout_height="4dp" 
    			android:background="@color/button_focused"/>

       	 	<Button
            	android:id="@+id/buttonVibration"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:paddingLeft="20dp"
            	android:paddingRight="20dp"
            	android:gravity="left"
            	android:textColor="@color/white"
            	android:textSize="@dimen/main_menu_button_text_size"
            	android:text="@string/settings_vibration"
            	android:background="@drawable/main_menu_button"
            	android:drawableRight="@drawable/vibrate_on" />
        
        	<View 
    			android:layout_width="match_parent"
    			android:layout_height="4dp" 
    			android:background="@color/button_focused"/>

        	<Button
            	android:id="@+id/buttonControl"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:paddingLeft="20dp"
            	android:paddingRight="20dp"
            	android:gravity="left"
            	android:textColor="@color/white"
            	android:textSize="@dimen/main_menu_button_text_size"
            	android:text="@string/settings_control"
            	android:background="@drawable/main_menu_button"
            	android:drawableRight="@drawable/control2" />
        
        	<View 
    			android:layout_width="match_parent"
    			android:layout_height="4dp" 
    			android:background="@color/button_focused"/>
        
    	</LinearLayout>
    </ScrollView>
    
</LinearLayout>
